set compiler version to 11